objects/RPS_Associated_Individual_c__x.object
<CustomObject>
    <externalDataSource>ProjData</externalDataSource>
    <externalName>RPS_Associated_Individual__c</externalName>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Associated Individual ID</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Account_Taxpayer_ID_c__c</fullName>
        <externalDeveloperName>RPS_Account_Taxpayer_ID__c</externalDeveloperName>
        <label>Account&apos;s Taxpayer ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Account_c__c</fullName>
        <externalDeveloperName>RPS_Account__c</externalDeveloperName>
        <label>Account</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Active__c</externalDeveloperName>
        <label>Active?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Blue_Dot_Indicator_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Blue_Dot_Indicator__c</externalDeveloperName>
        <label>Blue Dot Indicator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Broker_Dealer_Firm_ID_c__c</fullName>
        <externalDeveloperName>RPS_Broker_Dealer_Firm_ID__c</externalDeveloperName>
        <label>Broker/Dealer Firm ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Broker_Dealer_Firm_Name_c__c</fullName>
        <externalDeveloperName>RPS_Broker_Dealer_Firm_Name__c</externalDeveloperName>
        <label>Broker/Dealer Firm Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Broker_Dealer_Firm_c__c</fullName>
        <externalDeveloperName>RPS_Broker_Dealer_Firm__c</externalDeveloperName>
        <label>Broker/Dealer Firm</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Name_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Name__c</externalDeveloperName>
        <label>Contact Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Role_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Role__c</externalDeveloperName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>RIA</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Business Contact</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm External Wholesaler (Influencer)</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Investment Analyst</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Plan Consultant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm RFP Analyst</fullName>
                </value>
                <value>
                    <fullName>Auditor CPA</fullName>
                </value>
                <value>
                    <fullName>Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>ERISA Attorney</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Analyst Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner External Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Fund Partner National Accounts Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider General Contact</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DB)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DC)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (NQ)</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrative Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrator</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Committee Member</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Compliance Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Consultant</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Day to Day Admin</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Executive</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor General Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Fiduciary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Type_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Type__c</externalDeveloperName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Business Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_c__c</fullName>
        <externalDeveloperName>RPS_Contact__c</externalDeveloperName>
        <label>Contact</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_E_Series_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_E_Series__c</externalDeveloperName>
        <label>Participant Engagement Program</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Elite_Advisor_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Elite_Advisor__c</externalDeveloperName>
        <label>Elite Advisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Email_Address_c__c</fullName>
        <externalDeveloperName>RPS_Email_Address__c</externalDeveloperName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RPS_End_Date_c__c</fullName>
        <externalDeveloperName>RPS_End_Date__c</externalDeveloperName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Enterprise_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_Enterprise_Total_AUM__c</externalDeveloperName>
        <label>Enterprise Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_External_Associated_Individual_ID_c__c</fullName>
        <externalDeveloperName>RPS_External_Associated_Individual_ID__c</externalDeveloperName>
        <label>RPS External Associated Individual ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Firm_Notes_c__c</fullName>
        <externalDeveloperName>RPS_Firm_Notes__c</externalDeveloperName>
        <label>Firm Notes</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_GA_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_GA_Total_AUM__c</externalDeveloperName>
        <label>Signature Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Grandparent_Link_c__c</fullName>
        <externalDeveloperName>RPS_Grandparent_Link__c</externalDeveloperName>
        <label>Grandparent</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Grandparent_Value_c__c</fullName>
        <externalDeveloperName>RPS_Grandparent_Value__c</externalDeveloperName>
        <label>Grandparent Value</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_ID_c__c</fullName>
        <externalDeveloperName>RPS_ID__c</externalDeveloperName>
        <label>ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Independent_Producer_Firm_ID_c__c</fullName>
        <externalDeveloperName>RPS_Independent_Producer_Firm_ID__c</externalDeveloperName>
        <label>Independent Producer Firm ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Independent_Producer_Firm_Name_c__c</fullName>
        <externalDeveloperName>RPS_Independent_Producer_Firm_Name__c</externalDeveloperName>
        <label>Independent Producer Firm Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Key_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Key_Contact__c</externalDeveloperName>
        <label>Key Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Legacy_System_c__c</fullName>
        <externalDeveloperName>RPS_Legacy_System__c</externalDeveloperName>
        <label>Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satuit</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Mailing_City_c__c</fullName>
        <externalDeveloperName>RPS_Mailing_City__c</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Country_c__c</fullName>
        <externalDeveloperName>RPS_Mailing_Country__c</externalDeveloperName>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Saint Barthélemy</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Geolocation_Latitude_s__c</fullName>
        <externalDeveloperName>RPS_Mailing_Geolocation__Latitude__s</externalDeveloperName>
        <label>Mailing Geolocation (Latitude)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Geolocation_Longitude_s__c</fullName>
        <externalDeveloperName>RPS_Mailing_Geolocation__Longitude__s</externalDeveloperName>
        <label>Mailing Geolocation (Longitude)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_State_Province_c__c</fullName>
        <externalDeveloperName>RPS_Mailing_State_Province__c</externalDeveloperName>
        <label>Mailing State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>New South Wales</fullName>
                </value>
                <value>
                    <fullName>Northern Territory</fullName>
                </value>
                <value>
                    <fullName>Queensland</fullName>
                </value>
                <value>
                    <fullName>South Australia</fullName>
                </value>
                <value>
                    <fullName>Tasmania</fullName>
                </value>
                <value>
                    <fullName>Victoria</fullName>
                </value>
                <value>
                    <fullName>Western Australia</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Bahia</fullName>
                </value>
                <value>
                    <fullName>Ceará</fullName>
                </value>
                <value>
                    <fullName>Distrito Federal</fullName>
                </value>
                <value>
                    <fullName>Espírito Santo</fullName>
                </value>
                <value>
                    <fullName>Goiás</fullName>
                </value>
                <value>
                    <fullName>Maranhão</fullName>
                </value>
                <value>
                    <fullName>Minas Gerais</fullName>
                </value>
                <value>
                    <fullName>Mato Grosso do Sul</fullName>
                </value>
                <value>
                    <fullName>Mato Grosso</fullName>
                </value>
                <value>
                    <fullName>Pará</fullName>
                </value>
                <value>
                    <fullName>Paraíba</fullName>
                </value>
                <value>
                    <fullName>Pernambuco</fullName>
                </value>
                <value>
                    <fullName>Piauí</fullName>
                </value>
                <value>
                    <fullName>Paraná</fullName>
                </value>
                <value>
                    <fullName>Rio de Janeiro</fullName>
                </value>
                <value>
                    <fullName>Rio Grande do Norte</fullName>
                </value>
                <value>
                    <fullName>Rondônia</fullName>
                </value>
                <value>
                    <fullName>Roraima</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Street_c__c</fullName>
        <externalDeveloperName>RPS_Mailing_Street__c</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Zip_Postal_Code_c__c</fullName>
        <externalDeveloperName>RPS_Mailing_Zip_Postal_Code__c</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Parent_Link_c__c</fullName>
        <externalDeveloperName>RPS_Parent_Link__c</externalDeveloperName>
        <label>Parent</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Parent_Value_c__c</fullName>
        <externalDeveloperName>RPS_Parent_Value__c</externalDeveloperName>
        <label>Parent Value</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Phone_c__c</fullName>
        <externalDeveloperName>RPS_Phone__c</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RPS_Primary_Message_c__c</fullName>
        <externalDeveloperName>RPS_Primary_Message__c</externalDeveloperName>
        <label>Primary Message</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Primary_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Primary__c</externalDeveloperName>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Referenceable_Effective_Date_c__c</fullName>
        <externalDeveloperName>RPS_Referenceable_Effective_Date__c</externalDeveloperName>
        <label>Referenceable Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Referenceable_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Referenceable__c</externalDeveloperName>
        <label>Referenceable?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Start_Date_c__c</fullName>
        <externalDeveloperName>RPS_Start_Date__c</externalDeveloperName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_TRS_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_TRS_Total_AUM__c</externalDeveloperName>
        <label>TRS Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Total_AUM_As_Of_Date_c__c</fullName>
        <externalDeveloperName>RPS_Total_AUM_As_Of_Date__c</externalDeveloperName>
        <label>Total AUM As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_Total_AUM__c</externalDeveloperName>
        <label>Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <label>RPS Associated Individual</label>
    <pluralLabel>RPS Associated Individuals</pluralLabel>
</CustomObject>